api_versioned_docs/version-12.0.4/avalonia/controls/documents/primitives/actions/blockbordertoggleaction.mdx
---
title: 'BlockBorderToggleAction'
hide_title: true
slug: '/avalonia/controls/documents/primitives/actions/blockbordertoggleaction'
uid: 'Avalonia.Controls.Documents.Primitives.Actions.BlockBorderToggleAction'
commentId: 'T:Avalonia.Controls.Documents.Primitives.Actions.BlockBorderToggleAction'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.RichTextEditor'
assembly: 'Avalonia.Controls.RichTextEditor'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents.Primitives.Actions'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">BlockBorderToggleAction Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Documents.Primitives.Actions</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
</div>

<div className="apiref-page__lead">

Action for toggling block borders on/off for affected blocks.

</div>

<div className="apiref-page__signature">

```csharp
public class BlockBorderToggleAction
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="editoraction">EditorAction</a> <span className="apiref-page__relation-separator">-&gt;</span> BlockBorderToggleAction
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> <a href="ieditoraction">IEditorAction</a>, <a href="itoggleaction">IToggleAction</a>
</div>
</div>

## Remarks

Targets every block-level element covered by the selection. When a
paragraph sits inside a [Avalonia.Controls.Documents.TableCell](xref:Avalonia.Controls.Documents.TableCell), the cell is
preferred over the inner paragraph so the border wraps the cell;
outside of tables the paragraph itself is the target. When the
document is empty, an implicit Paragraph is materialized so the
user can apply a border before typing — same convention as text
input and the other block-level actions.

## Constructors

| Name | Description |
| --- | --- |
| [BlockBorderToggleAction](#uid-f934fe27f8) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-f934fe27f8"></span>

### BlockBorderToggleAction Constructor

```csharp
public BlockBorderToggleAction()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [CanExecute](#uid-ad8492fc40) | Gets whether the action can currently execute. |
| [Execute](#uid-8196a7c783) | Executes the action synchronously. |
| [GetState](#uid-b0a3eaa789) | Gets the current state of the action. |
| [IsChecked](#uid-90e1fea39f) | Gets whether the action is currently "on" for the selection. |
| [ExecuteAsync](editoraction.mdx#uid-6a0258eff0) | Executes the action asynchronously. Inherited from [EditorAction](editoraction.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-ad8492fc40"></span>

### CanExecute Method

Gets whether the action can currently execute.

```csharp
public bool CanExecute(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to check against.


#### Returns

bool

True if the action can execute; otherwise, false.


#### Remarks

This is called frequently to update UI state (button enabled/disabled).
Implementations should be fast and avoid heavy computation.

</section>

<section className="apiref-page__member-entry">

<span id="uid-8196a7c783"></span>

### Execute Method

Executes the action synchronously.

```csharp
public void Execute(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to execute on.


#### Remarks

For actions that require async operations (like file dialogs),
use [Avalonia.Controls.Documents.Primitives.Actions.IEditorAction.ExecuteAsync(Avalonia.Controls.Documents.Primitives.ITextEditorHost)](xref:Avalonia.Controls.Documents.Primitives.Actions.IEditorAction.ExecuteAsync%28Avalonia.Controls.Documents.Primitives.ITextEditorHost%29) instead.

</section>

<section className="apiref-page__member-entry">

<span id="uid-b0a3eaa789"></span>

### GetState Method

Gets the current state of the action.

```csharp
public object GetState(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to query.


#### Returns

object

The current state, or null if the action has no state.
For toggle actions, this returns a boolean.
For property actions, this returns the current property value.


</section>

<section className="apiref-page__member-entry">

<span id="uid-90e1fea39f"></span>

### IsChecked Method

Gets whether the action is currently "on" for the selection.

```csharp
public bool IsChecked(Avalonia.Controls.Documents.Primitives.ITextEditorHost host)
```

#### Parameters

`host` [Avalonia.Controls.Documents.Primitives.ITextEditorHost](xref:Avalonia.Controls.Documents.Primitives.ITextEditorHost)

The editor host to query.


#### Returns

bool

True if the toggle state is on; otherwise, false.


#### Remarks

For formatting actions, this returns true if all text in the selection
has the formatting applied.

</section>

## Properties

| Name | Description |
| --- | --- |
| [DisplayName](#uid-1b4b43ccce) | Gets the display name for UI purposes. |
| [Id](#uid-09564c204d) | Gets the unique identifier for this action. |
| [Gesture](editoraction.mdx#uid-557e9af400) | Gets the optional keyboard gesture for this action. Inherited from [EditorAction](editoraction.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-1b4b43ccce"></span>

### DisplayName Property

Gets the display name for UI purposes.

```csharp
public string DisplayName { get; set; }
```

#### Remarks

This is used for tooltips, menu items, and accessibility.

</section>

<section className="apiref-page__member-entry">

<span id="uid-09564c204d"></span>

### Id Property

Gets the unique identifier for this action.

```csharp
public string Id { get; set; }
```

#### Remarks

IDs follow a hierarchical naming convention:

- Edit.Undo, Edit.Redo, Edit.Cut, etc.
- Format.RichBold, Format.RichItalic, etc.
- Paragraph.AlignLeft, Paragraph.BulletList, etc.

</section>

</ApiRefPage>

